--- a/style.css
+++ b/style.css
@@ -1,61 +1,89 @@
-#btn{
-    margin: 5px;
+body{
+    width: 100%;
+    height: 200%;
+    margin: 0%;
+    background-color: black;
+   
+    flex-direction: column;
+}
+.btn{
+
     border: none;
     outline: none;
+    padding: 30px;
+    margin: 10px;
+
     font-style: normal;
     font-family: Arial, Helvetica, sans-serif;
-    border-radius: 5px;
+    border-radius: 60px;
     text-decoration: none;
     align-items: center;
     flex-direction: column;
-    font-size: 20px;
+    font-size: 50px;
 }
-
-body{
-    margin: 0%;
-    background-color: black;
-    align-content: center;
+.sub{
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
 }
+
 .display{
-    width: 40%;
-    height: 30px;
+    width: 100%;
+    height: 30%;
     font-size: 10px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    display: flex;margin: auto;
-    margin-top: 20px;
+    display: flex;
+    margin-top: 60px;
     justify-content: center;
     align-items: center;
+    color: aquamarine;
     color: rgb(16, 45, 233);
-    background-color: azure;
+
     border-radius: 30px;
+}
+#display1{
+    width: 40%;
+    height: 50px;
+    font-size: 10px;
+    margin-top: 5px;
+    text-align: center;
+    padding: 20px;
+    font-weight: 500;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 50px;
+    
+    color: rgb(43, 14, 236);
+    background-color: aqua;
+    border-radius: 20px;
+    
 }
 .container{
     width: 100%;
-    height: 20px;
-    margin-top: 20px;
+    height: 100%;
+    margin-top: 10px;
     font-family: monospace;
     display: flex;
     justify-content:  center;
     align-items: center;
 }
 #main{
-    margin-top: 30px;
+    margin-top: 80px;
 }
 footer{
     width: 100%;
-    height: 30px;
+    height: 50px;
     text-align: center;
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: rgb(15, 15, 15);
-    margin-top: 40px;
+    margin-top: 85px;
 }
 footer a{
     text-decoration: none;
-    font-size: 10px;
+    font-size: 20px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: rgb(252, 252, 252);
     text-align: center;
